added github nav element

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,8 @@
         {% endif %}
       {% endfor %}
       
+      <a class="sidebar-nav-item" href="{{ site.github }}">Github</a>
+      
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
