--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,12 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+  <hr>
+  {% if page.comments %}
+    <div class="comments-container">
+      {% include comments.html %}
+    </div>
+  {% endif %}
 </div>
 
 <div class="related">
