added some meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,11 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- extra meta tags -->
+  <meta name="theme-color" content="#6a9fb5"> <!-- some browsers change color based on this -->
+  {%if page.tags %}
+    <meta name="keywords" content="{{ page.tags | join: ', ' | escape }}"/>
+  {%endif %}
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 </head>
