better caption style

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,3 +10,9 @@ figcaption {
   padding: 0.5em;
   text-align: center;
 }
+
+figure > img {
+  margin-bottom: 0px !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
