--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
         {% endif %}
       {% endfor %}
       
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}posts/">Archive</a>
       <a class="sidebar-nav-item" href="{{ site.github }}">Github</a>
       
     </nav>
