--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
       
       <a class="sidebar-nav-item" href="{{ site.baseurl }}posts/">Archive</a>
-      <a rel="me" class="sidebar-nav-item" href="{{ site.github }}">Github</a>
+      <a class="sidebar-nav-item" href="{{ site.github }}">Github</a>
       
     </nav>
 
