--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,15 +1,19 @@
 $spacing: 0.5em
 $horizontal-rule: 1px solid #bbb
 
+//colors
+$lightbg: #ddd
+$lightestbg: #f5f5f5
+
 //readability
 html
   font-family: sans-serif
-  font-size: 18px
+  font-size: 1.125em
   line-height: 1.6
   word-wrap: break-word // break long words/urls (like the tox id)
 
 body
-  max-width: 650px
+  max-width: 40em
   margin: 0 auto
   padding: 0 $spacing
 
@@ -51,20 +55,29 @@ a:visited
 header h1
   font-size: 1.5em
 
+// put number and definition on the same line
+.footnote-definition > p
+  display: inline
+
+.footnote-definition:first-of-type
+  border-top: $horizontal-rule
+  padding-top: $spacing
+
 
 // Figures
 figure
   display: table
   border: 1px solid lightgray
 
+$captionborder: 1px solid gray
 figcaption
   display: table-caption
   caption-side: bottom
-  border-bottom: 1px solid gray
-  border-right: 1px solid gray
-  border-left: 1px solid gray
-  background-color: #f5f5f5
-  padding: 0.5em
+  border-bottom: $captionborder
+  border-right: $captionborder
+  border-left: $captionborder
+  background-color: $lightestbg
+  padding: $spacing
   text-align: center
 
 figure > img
