--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,11 @@
 {% extends "default.html" %}
 
+{% block main %}
+<h1>Hey there</h1>
+
+<p>This is my internet home.</p>
+
+<p>Take a look to some of the sections above!</p>
+
+{% endblock %}
+
