--- a/sass/main.sass
+++ b/sass/main.sass
@@ -63,6 +63,10 @@ header h1
   border-top: $horizontal-rule
   padding-top: $spacing
 
+// do not let big images expand the page
+article img
+  max-width: 100%
+
 
 // Figures
 figure
@@ -82,5 +86,4 @@ figcaption
 
 figure > img
   display: block;
-  max-width: 100%
 
