--- a/sass/main.sass
+++ b/sass/main.sass
@@ -67,6 +67,12 @@ header h1
 article img
   max-width: 100%
 
+// make anchors less annoying
+.heading-anchor, .heading-anchor:visited
+  color: gray
+.heading-anchor:hover
+  color: blue
+
 
 // Figures
 figure
