--- a/templates/postlist.html
+++ b/templates/postlist.html
@@ -12,7 +12,7 @@
     {% endif %}
   >
     <h2 class="post-title">
-      <a href="{{ post.permalink }}">
+      <a href="{{ post.permalink | safe }}">
         {{ post.title }}
       </a>
     </h2>
@@ -27,7 +27,7 @@
 
     {{ post.summary | safe}}
 
-    <p><a href="{{ post.permalink }}#continue-reading">Continue reading…</a></p>
+    <p><a href="{{ post.permalink | safe }}#continue-reading">Continue reading…</a></p>
   </div>
   {% endfor %}
 </div>
