--- a/templates/post.html
+++ b/templates/post.html
@@ -10,6 +10,7 @@
 >
   <h1>{{ page.title }}</h1>
   <time datetime="{{ page.date }}">{{ page.date }}</time>
+  {% include "includes/toc.html" %}
   {{ page.content | safe }}
   {% if page.comments %}
     <hr>
