--- a/templates/post.html
+++ b/templates/post.html
@@ -10,6 +10,7 @@
 >
   <h1>{{ page.title }}</h1>
   <time datetime="{{ page.date }}">{{ page.date }}</time>
+  <span>Reading time: {{ page.reading_time }} minutes</span>
   {% include "includes/toc.html" %}
   {{ page.content | safe }}
   {% if page.comments %}
