Fix lang values

--- a/templates/post.html
+++ b/templates/post.html
@@ -3,9 +3,9 @@
 {% block main %}
 <article class="post"
     {% if page.extra.language == 'italian' %}
-      xml:lang="it" lang="it-it"
+      xml:lang="it-it" lang="it-it"
     {% elif page.extra.language == 'english' %}
-      xml:lang="en" lang="en-us"
+      xml:lang="en-us" lang="en-us"
     {% endif %}
 >
   <h1>{{ page.title }}</h1>
