--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -14,6 +14,8 @@
       {% endif %}
     {% elif section.title %}
       {{ section.title }} &middot; {{ config.title }}
+    {% else %}
+      {{ config.title }}
     {% endif %}
   </title>
 
