Site description should be small

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -4,6 +4,6 @@
       {{ config.title }}
     </a>
   </h1>
-  <p>{{ config.description }}</p>
+  <small><p>{{ config.description }}</p></small>
 </header>
 
