--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 <p>This is my internet home.</p>
 
-<p>Take a look to some of the sections above!</p>
+<p>Take a look at some of the sections above!</p>
 
 {% endblock %}
 
