--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -2,7 +2,7 @@
   <link href="https://gmpg.org/xfn/11" rel="profile">
   <meta charset="utf-8">
 
-  <!-- Enable responsiveness on mobile devices-->
+  {# Enable responsiveness on mobile devices #}
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
@@ -19,22 +19,22 @@
     {% endif %}
   </title>
 
-  <!-- CSS -->
+  {# CSS #}
   <link rel="stylesheet" href="{{ config.base_url }}/main.css">
 
-  <!-- Icons -->
+  {# Icons #}
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ config.base_url }}public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="{{ config.base_url }}public/favicon.png">
 
-  <!-- RSS -->
+  {# RSS #}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 
-  <!-- extra meta tags -->
+  {# extra meta tags #}
   {# Let the browser know the canonical url of the page #}
   {% if page.permakink %}
     <link rel="bookmark" href="{{ page.permalink | safe }}" />
   {% endif %}
-  <meta name="theme-color" content="#6a9fb5"> <!-- some browsers change color based on this -->
+  <meta name="theme-color" content="#6a9fb5"> {# some browsers change color based on this #}
   {% if page.tags %}
     <meta name="keywords" content="{{ page.tags | join(sep=', ') | escape }}"/>
   {% endif %}
