--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -35,10 +35,10 @@
     <link rel="bookmark" href="{{ page.permalink | safe }}" />
   {% endif %}
   <meta name="theme-color" content="#6a9fb5"> {# some browsers change color based on this #}
-  {% if page.tags %}
-    <meta name="keywords" content="{{ page.tags | join(sep=', ') | escape }}"/>
+  {% if page.extra.tags %}
+    <meta name="keywords" content="{{ page.extra.tags | join(sep=', ') | escape }}"/>
   {% endif %}
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate(length=160) }}{% else %}{{ config.description }}{% endif %}">
+  <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate(length=160) }}{% else %}{{ config.description }}{% endif %}">
   <meta property="og:image" content="{% if page.extra.image %}{{ page.extra.image }}{% else %}{{ config.base_url }}public/favicon.png{% endif %}">
 </head>
 
