Fix some filters

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -41,7 +41,7 @@
   {% if page.extra.tags %}
     <meta name="keywords" content="{{ page.extra.tags | join(sep=', ') | escape }}"/>
   {% endif %}
-  <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate(length=160) }}{% else %}{{ config.description }}{% endif %}">
+  <meta name="description" content="{% if page.summary %}{{ page.summary | striptags | replace(from="\n", to=" ") | truncate(length=160) }}{% else %}{{ config.description }}{% endif %}">
   <meta property="og:image" content="{% if page.extra.image %}{{ page.extra.image }}{% else %}{{ config.base_url }}public/favicon.png{% endif %}">
 </head>
 
