Mark safe stuff as safe

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <h1>
-    <a href="{{ config.base_url }}">
+    <a href="{{ config.base_url | safe }}">
       {{ config.title }}
     </a>
   </h1>
