--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -20,11 +20,11 @@
   </title>
 
   {# CSS #}
-  <link rel="stylesheet" href="{{ config.base_url }}/main.css">
+  <link rel="stylesheet" href="{{ config.base_url | safe }}/main.css">
 
   {# Icons #}
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ config.base_url }}public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ config.base_url }}public/favicon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ config.base_url | safe }}public/apple-touch-icon-144-precomposed.png">
+  <link rel="shortcut icon" href="{{ config.base_url | safe }}public/favicon.png">
 
   {# RSS #}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
@@ -42,6 +42,6 @@
     <meta name="keywords" content="{{ page.extra.tags | join(sep=', ') | escape }}"/>
   {% endif %}
   <meta name="description" content="{% if page.summary %}{{ page.summary | safe | striptags | replace(from="\n", to=" ") | truncate(length=160) }}{% else %}{{ config.description }}{% endif %}">
-  <meta property="og:image" content="{% if page.extra.image %}{{ page.extra.image }}{% else %}{{ config.base_url }}public/favicon.png{% endif %}">
+  <meta property="og:image" content="{% if page.extra.image %}{{ page.extra.image | safe }}{% else %}{{ config.base_url | safe }}public/favicon.png{% endif %}">
 </head>
 
