--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,11 +1,11 @@
 <nav>
-  <a href="{{ config.base_url }}">Home</a>
+  <a href="{{ config.base_url | safe }}">Home</a>
 
   {# TODO use a loop #}
-  <a href="{{ config.base_url }}/about/">About</a>
-  <a href="{{ config.base_url }}/projects/">Projects</a>
-  <a href="{{ config.base_url }}/posts/">Archive</a>
-  <a href="{{ config.extra.github }}">Github</a>
+  <a href="{{ config.base_url | safe }}/about/">About</a>
+  <a href="{{ config.base_url | safe }}/projects/">Projects</a>
+  <a href="{{ config.base_url | safe }}/posts/">Archive</a>
+  <a href="{{ config.extra.github | safe }}">Github</a>
   
 </nav>
 
