--- a/templates/includes/toc.html
+++ b/templates/includes/toc.html
@@ -1,7 +1,7 @@
 <details>
   <summary>Table of contents</summary>
   <ol>
-  {% for h1 in page.toc %}
+  {% for h1 in toc %}
     <li>
       <a href="{{h1.permalink | safe}}">{{ h1.title }}</a>
       {% if h1.children %}
