--- a/sass/main.sass
+++ b/sass/main.sass
@@ -93,3 +93,13 @@ figcaption
 figure > img
   display: block;
 
+.warn
+  border: 1px solid black
+  background-color: rgba(255,200,100,0.5)
+  .warntitle
+    padding: $spacing
+    border-bottom: 1px solid black
+  .warnbody
+    padding-left: $spacing
+    padding-right: $spacing
+
