--- a/templates/shortcodes/note.html
+++ b/templates/shortcodes/note.html
@@ -1,6 +1,6 @@
-<div class="titledbox warn">
+<div class="titledbox note">
   <div class="titledboxtitle">
-    &#9888; Warining{% if title %} - {{ title }}{% endif %}
+    &#128456; Note{% if title %} - {{ title }}{% endif %}
   </div>
   <div class="titledboxbody">
     {{ body | markdown }}
