--- a/sass/main.sass
+++ b/sass/main.sass
@@ -93,13 +93,20 @@ figcaption
 figure > img
   display: block;
 
-.warn
+.titledbox
   border: 1px solid black
-  background-color: rgba(255,200,100,0.5)
-  .warntitle
+  margin-top: $spacing
+  margin-bottom: $spacing
+  .titledboxtitle
     padding: $spacing
     border-bottom: 1px solid black
-  .warnbody
+  .titledboxbody
     padding-left: $spacing
     padding-right: $spacing
+
+.warn
+  background-color: rgba(255,200,100,0.5)
+
+.note
+  background-color: rgba(200,200,255,0.5)
 
