--- a/templates/shortcodes/warn.html
+++ b/templates/shortcodes/warn.html
@@ -1,6 +1,6 @@
 <div class="titledbox warn">
   <div class="titledboxtitle">
-    &#9888; Warining{% if title %} - {{ title }}{% endif %}
+    &#9888; Warning{% if title %} - {{ title }}{% endif %}
   </div>
   <div class="titledboxbody">
     {{ body | markdown }}
