Strong warn/note title

--- a/templates/shortcodes/note.html
+++ b/templates/shortcodes/note.html
@@ -1,6 +1,6 @@
 <div class="titledbox note">
   <div class="titledboxtitle">
-    &#128456; Note{% if title %} - {{ title }}{% endif %}
+    <strong>&#128456; Note</strong>{% if title %} - {{ title }}{% endif %}
   </div>
   <div class="titledboxbody">
     {{ body | markdown }}
