--- a/sass/main.sass
+++ b/sass/main.sass
@@ -25,9 +25,10 @@ header, footer
   p, h1, h2
     margin: 0
 
-// hide long lines
 pre
+  // hide long lines
   overflow-x: scroll
+  padding: $spacing
 
 
 // Misc
