New favicon (area33h)

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -23,8 +23,9 @@
   <link rel="stylesheet" href="{{ config.base_url | safe }}/main.css">
 
   {# Icons #}
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ config.base_url | safe }}public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ config.base_url | safe }}public/favicon.png">
+  <link rel="icon" sizes="32x32" href="{{ config.base_url | safe }}/favicon.png">
+  <link rel="icon" sizes="512x512" href="{{ config.base_url | safe }}/favicon512.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="{{ config.base_url | safe }}/apple-touch-icon.png">
 
   {# RSS #}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
