--- a/templates/shortcodes/note.html
+++ b/templates/shortcodes/note.html
@@ -3,7 +3,7 @@
     <strong>&#128456; Note</strong>{% if title %} - {{ title }}{% endif %}
   </div>
   <div class="titledboxbody">
-    {{ body | markdown }}
+    {{ body | markdown | safe }}
   </div>
 </div>
 
