--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
 
   {# Enable responsiveness on mobile devices #}
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
     {% if page.title %}
