--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -4,6 +4,9 @@
 
   {# Enable responsiveness on mobile devices #}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {# Let the user agent know about dark mode as early as possible to avoid
+  white flashes. This is also defined in CSS. #}
+  <meta name="color-scheme" content="light dark">
 
   <title>
     {% if page.title %}
