--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,10 +1,9 @@
 <nav>
-  <a href="{{ config.base_url | safe }}">Home</a>
+  <a href="{{ config.base_url | safe }}" accesskey="1">Home</a>
 
-  {# TODO use a loop #}
-  <a href="{{ config.base_url | safe }}/about/">About</a>
+  <a href="{{ config.base_url | safe }}/about/" accesskey="9 s">About</a>
   <a href="{{ config.base_url | safe }}/projects/">Projects</a>
-  <a href="{{ config.base_url | safe }}/posts/">Archive</a>
+  <a href="{{ config.base_url | safe }}/posts/" accesskey="b">Archive</a>
   <a href="{{ config.extra.github | safe }}">Github</a>
   
 </nav>
